@@ -9,24 +9,25 @@ public class GarageController {
     private GarageBeheerder gb = new GarageBeheerder();
 
     public List<String> geefAutosZonderOnderhoudsbeurt() {
-    	List<Auto> li = gb.geefAutosZonderOnderhoudsbeurtJPA();
-        //return li.stream().map(a -> a.getNummerplaat()).toList();
-    	return li.stream().map(Vervoermiddel::getNummerplaat).collect(Collectors.toList());
+	List<Auto> li = gb.geefAutosZonderOnderhoudsbeurtJPA();
+	// return li.stream().map(a -> a.getNummerplaat()).toList();
+	return li.stream().map(Vervoermiddel::getNummerplaat).collect(Collectors.toList());
     }
 
     public List<String> geefAutosMetOnderhoudsbeurt() {
-    	List<Auto> li = gb.geefAutosMetOnderhoudsbeurtJPA();
-    	//return li.stream().map(a -> a.getNummerplaat()).toList();
-    	return li.stream().map(Vervoermiddel::getNummerplaat).collect(Collectors.toList());
+	List<Auto> li = gb.geefAutosMetOnderhoudsbeurtJPA();
+	// return li.stream().map(a -> a.getNummerplaat()).toList();
+	return li.stream().map(Vervoermiddel::getNummerplaat).collect(Collectors.toList());
     }
 
     public List<String> geefOnderhoudsbeurtenOpDatum(int jaar, int maand, int dag) {
-    	List<Onderhoudsbeurt> li = gb.geefOnderhoudsbeurtenOpDatumJPA(LocalDate.of(jaar, maand, dag));
-        return li.stream().map(Onderhoudsbeurt::getVervoermiddel).map(Vervoermiddel::getNummerplaat).collect(Collectors.toList());
+	List<Onderhoudsbeurt> li = gb.geefOnderhoudsbeurtenOpDatumJPA(LocalDate.of(jaar, maand, dag));
+	return li.stream().map(Onderhoudsbeurt::getVervoermiddel).map(Vervoermiddel::getNummerplaat)
+		.collect(Collectors.toList());
     }
 
     public void close() {
-        gb.closePersistentie();
+	gb.closePersistentie();
     }
 
 }
